[gd_scene load_steps=3 format=3 uid="uid://ctbijqd7mu2x1"]

[ext_resource type="Script" path="res://Scripts/mainMenu.gd" id="1_4c387"]
[ext_resource type="Theme" uid="uid://c1m7qt4i4yj6k" path="res://Themes/Default.tres" id="1_h72p8"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_4c387")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -389.0
offset_top = 45.0
offset_right = 389.0
offset_bottom = 187.0
grow_horizontal = 2
theme = ExtResource("1_h72p8")
text = "CQB Simulator"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -182.0
offset_right = 290.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Start" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h72p8")
theme_override_font_sizes/font_size = 80
text = "Start Simulation"

[node name="MapSetUp" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h72p8")
theme_override_font_sizes/font_size = 80
text = "Building Setup"

[node name="ArmorySetup" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h72p8")
theme_override_font_sizes/font_size = 80
text = "Armory Setup"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h72p8")
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MapSetUp" to="." method="_on_map_set_up_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ArmorySetup" to="." method="_on_armory_setup_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
